--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lendesk-service",
+  "name": "simple-authentication-api",
   "version": "0.0.0",
-  "description": "service for lendesk assignment",
+  "description": "service for user registration and authentication with Redis",
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index",
@@ -22,7 +22,6 @@
     "express": "4.17.1",
     "express-validation": "^3.0.8",
     "http-status": "^1.5.0",
-    "lodash": "4.17.21",
     "moment": "^2.29.1",
     "passport": "^0.5.0",
     "passport-http": "^0.3.0",
